--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ttu-logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Omni - AI Tuyển Sinh Đại học Tân Tạo</title>
     <meta name="description" content="Hệ thống AI tư vấn tuyển sinh Đại học Tân Tạo" />
   </head>
